--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server --host 0.0.0.0 --open --hot --config build/webpack.config.js",
     "build": "NODE_ENV=production webpack --config build/webpack.config.js"
+  },
+  "dependencies": {
+    "set-value": "^3.0.1"
   }
 }
